# simple-evals-browsecomp

./: .gitignore  ASYNC_EVALS.md  LICENSE  README.md  async_simple_evals.py  browsecomp_eval.py  common.py  poll_tasks.py  pyproject.toml  requirements.txt  run_async_tasks.py  setup.cfg  simple_evals.py  test_gpt41_websearch.py
sampler/: __init__.py  chat_completion_sampler.py  o_chat_completion_sampler.py  responses_sampler.py
simple_evals_browsecomp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
